--- a/route.html
+++ b/route.html
@@ -59,53 +59,53 @@
           <a class="navbar-brand p-0" href="index.html"> Singular Spain </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item" id="hola">
-                <a class="nav-link" href="index.html#main-hola">Hola</a>
+              <li class="nav-item" >
+                <a class="nav-link" id="hola" href="index.html#main-hola">Hola</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Qué es</a></li>
-                  <li class="nav-item"><a href="#">Protagonistas</a></li>
-                  <li class="nav-item"><a href="#">Cómo viajamos</a></li>
+                  <li class="nav-item"><a href="quees.html">Qué es</a></li>
+                  <li class="nav-item"><a href="protagonists.html">Protagonistas</a></li>
+                  <li class="nav-item"><a href="comovi.html">Cómo viajamos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="rutas">
-                <a class="nav-link" href="la rutas.html">RUTAS</a>
+                <a class="nav-link" href="rutas.html">RUTAS</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="la rutas.html">Las Rutas</a>
+                    <a href="rutas.html">Las Rutas</a>
                     <ul class="sub-sections">
                       <li class="nav-item">
-                        <a href="la matcha.html">LA MANCHA</a>
+                        <a href="route.html">LA MANCHA</a>
                       </li>
                       <li class="nav-item"><a href="#">SORIA</a></li>
                       <li class="nav-item"><a href="#">ALPUJARRAS</a></li>
                       <li class="nav-item"><a href="#">ÁVILA y SEGOVIA</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item"><a href="#">Actividades</a></li>
-                  <li class="nav-item">
-                    <a href="#">Información práctica</a>
+                  <li class="nav-item"><a href="activities.html">Actividades</a></li>
+                  <li class="nav-item"> 
+                    <a href="infoprac.html">Información práctica</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="nosotras">
-                <a class="nav-link" href="#">NOSOTRAS</a>
+                <a class="nav-link" href="nosotras.html">NOSOTRAS</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Quiénes somos</a></li>
+                  <li class="nav-item"><a href="nosotras.html">Quiénes somos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="contacta">
-                <a class="nav-link" href="#">CONTACTA</a>
+                <a class="nav-link" href="contactus.html">CONTACTA</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="#">Newsletter & Contacto</a>
+                    <a href="contactus.html">Newsletter & Contacto</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="Cuaderno">
-                <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
+                <a class="nav-link last-child" href="blog.html">Cuaderno de Campo</a>
               </li>
               <li class="nav-item d-xl-none">
-                <a class="lang-trigger"> ENG</a> &
+                <a class="lang-trigger"> ENG</a> <span class="Brandon-Bold">&</span>
                 <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
@@ -150,7 +150,7 @@
                   src="assets/images/la-matcha-map.png"
                   data-src="assets/images/la-matcha-map.png"
                   class="lazyload"
-                  alt="La matcha Map"
+                  alt="route Map"
                 />
               </a>
             </div>
@@ -168,7 +168,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -181,7 +181,7 @@
                     src="assets/images/la-matcha-p2.png"
                     data-src="assets/images/la-matcha-p2.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -194,7 +194,7 @@
                     src="assets/images/la-matcha-p3.png"
                     data-src="assets/images/la-matcha-p3.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -207,7 +207,7 @@
                     src="assets/images/la-matcha-p4.png"
                     data-src="assets/images/la-matcha-p4.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -220,7 +220,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -233,7 +233,7 @@
                     src="assets/images/la-matcha-p5.png"
                     data-src="assets/images/la-matcha-p5.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                   />
                 </a>
               </div>
@@ -247,7 +247,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -260,7 +260,7 @@
                     src="assets/images/la-matcha-p2.png"
                     data-src="assets/images/la-matcha-p2.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -273,7 +273,7 @@
                     src="assets/images/la-matcha-p3.png"
                     data-src="assets/images/la-matcha-p3.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -286,7 +286,7 @@
                     src="assets/images/la-matcha-p4.png"
                     data-src="assets/images/la-matcha-p4.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -299,7 +299,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -312,7 +312,7 @@
                     src="assets/images/la-matcha-p5.png"
                     data-src="assets/images/la-matcha-p5.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                   />
                 </a>
               </div>
@@ -326,7 +326,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -339,7 +339,7 @@
                     src="assets/images/la-matcha-p2.png"
                     data-src="assets/images/la-matcha-p2.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -352,7 +352,7 @@
                     src="assets/images/la-matcha-p3.png"
                     data-src="assets/images/la-matcha-p3.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -365,7 +365,7 @@
                     src="assets/images/la-matcha-p4.png"
                     data-src="assets/images/la-matcha-p4.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -378,7 +378,7 @@
                     src="assets/images/la-matcha-p1.png"
                     data-src="assets/images/la-matcha-p1.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                 /></a>
               </div>
               <div class="grid-col">
@@ -391,7 +391,7 @@
                     src="assets/images/la-matcha-p5.png"
                     data-src="assets/images/la-matcha-p5.png"
                     class="lazyload"
-                    alt="la matcha img"
+                    alt="route img"
                   />
                 </a>
               </div>
@@ -415,7 +415,7 @@
                 src="assets/images/la-matcha-map.png"
                 data-src="assets/images/la-matcha-map.png"
                 class="lazyload"
-                alt="La matcha Map"
+                alt="route Map"
               />
             </a>
             <ul class="project-menu">
@@ -657,12 +657,12 @@
                       <span class="read-more">+ Leer más…</span>
                       <span class="read-less d-none">+ Leer menos…</span>
                     </button>
-                    <a href="contacta.html" class="link-to">+ Me interesa</a>
+                    <a href="contactus.html" class="link-to">+ Me interesa</a>
                   </div>
-                </div>
+                </div> 
               </div>
               <div class="arrow-fixed">
-                <a href="la rutas.html" class="next mb-4">
+                <a href="activities.html" class="next mb-4">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
@@ -670,7 +670,7 @@
                     alt="arrow-white"
                   />
                 </a>
-                <a href="la rutas.html" class="prev">
+                <a href="rutas.html" class="prev">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
