--- a/rutas.html
+++ b/rutas.html
@@ -5,7 +5,13 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-    <link rel="stylesheet" href="assets/css/styles.css?version=49" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=41" />
+
+    <style>
+      #main-content .fleuron-wrap{
+        left: -3px;      
+      }
+    </style>
   </head>
 
   <body>
@@ -59,53 +65,53 @@
           <a class="navbar-brand p-0" href="index.html"> Singular Spain </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item" id="hola">
-                <a class="nav-link" href="index.html#main-hola">Hola</a>
+              <li class="nav-item" >
+                <a class="nav-link" id="hola" href="index.html#main-hola">Hola</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Qué es</a></li>
-                  <li class="nav-item"><a href="#">Protagonistas</a></li>
-                  <li class="nav-item"><a href="#">Cómo viajamos</a></li>
+                  <li class="nav-item"><a href="quees.html">Qué es</a></li>
+                  <li class="nav-item"><a href="protagonists.html">Protagonistas</a></li>
+                  <li class="nav-item"><a href="comovi.html">Cómo viajamos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="rutas">
-                <a class="nav-link" href="la rutas.html">RUTAS</a>
+                <a class="nav-link" href="rutas.html">RUTAS</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="la rutas.html">Las Rutas</a>
+                    <a href="rutas.html">Las Rutas</a>
                     <ul class="sub-sections">
                       <li class="nav-item">
-                        <a href="la matcha.html">LA MANCHA</a>
+                        <a href="route.html">LA MANCHA</a>
                       </li>
                       <li class="nav-item"><a href="#">SORIA</a></li>
                       <li class="nav-item"><a href="#">ALPUJARRAS</a></li>
                       <li class="nav-item"><a href="#">ÁVILA y SEGOVIA</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item"><a href="#">Actividades</a></li>
+                  <li class="nav-item"><a href="activities.html">Actividades</a></li>
                   <li class="nav-item">
-                    <a href="#">Información práctica</a>
+                    <a href="infoprac.html">Información práctica</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="nosotras">
-                <a class="nav-link" href="#">NOSOTRAS</a>
+                <a class="nav-link" href="nosotras.html">NOSOTRAS</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Quiénes somos</a></li>
+                  <li class="nav-item"><a href="nosotras.html">Quiénes somos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="contacta">
-                <a class="nav-link" href="#">CONTACTA</a>
+                <a class="nav-link" href="contactus.html">CONTACTA</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="#">Newsletter & Contacto</a>
+                    <a href="contactus.html">Newsletter & Contacto</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="Cuaderno">
-                <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
+                <a class="nav-link last-child" href="blog.html">Cuaderno de Campo</a>
               </li>
               <li class="nav-item d-xl-none">
-                <a class="lang-trigger"> ENG</a> &
+                <a class="lang-trigger"> ENG</a> <span class="Brandon-Bold">&</span>
                 <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
@@ -176,17 +182,17 @@
                   <p>
                     <b>
                       Y si os atrae una zona en particular fuera de nustras
-                      rutas, <u>contactadnos</u> y os organizamos una RUTA a
-                      MEDIDA.
+                      rutas, <a href="contactus.html" class="underlined-link">contactadnos</a> y os organizamos una RUTA a
+                      MEDIDA. 
                     </b>
                   </p>
                   <br />
-                  <p>
+                  <p>  
                     ¿O quizás aún no tienes claro qué ruta escoger, o en qué
-                    fechas viajar? Subscríbete a nuestro <u>Newsletter</u> y te
+                    fechas viajar? Subscríbete a nuestro <a href="contactus.html" class="underlined-link">Newsletter</a> y te 
                     mantendremos al corriente de fechas y rutas, así como de
                     ideas en el mundo rural.
-                  </p>
+                  </p> 
                   <br />
                   <p>
                     ¿O quizás aún no tienes claro qué ruta escoger, o en qué
@@ -206,12 +212,12 @@
                       <span class="read-more">+ Leer más…</span>
                       <span class="read-less d-none">+ Leer menos…</span>
                     </button>
-                    <a href="contacta.html" class="link-to">+ Contacta</a>
+                    <a href="contactus.html" class="link-to">+ Contacta</a>
                   </div>
-                </div>
+                </div> 
               </div>
               <div class="arrow-fixed">
-                <a href="la matcha.html">
+                <a href="route.html">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
@@ -230,6 +236,6 @@
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="assets/js/scripts.js?version=8"></script>
+    <script src="assets/js/scripts.js?version=7"></script>
   </body>
 </html>
