--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-    <link rel="stylesheet" href="assets/css/styles.css?version=45" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=41" />
   </head>
 
   <body>
+
     <div class="main-wrapper">
+
       <header id="main-header" data-aos="fade" data-aos-delay="300">
+
         <nav class="navbar navbar-expand-xl navbar-dark">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
@@ -53,54 +56,54 @@
           </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item" id="hola">
-                <a class="nav-link" href="index.html#main-hola">Hola</a>
+              <li class="nav-item" >
+                <a class="nav-link" id="hola" href="index.html#main-hola">Hola</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Qué es</a></li>
-                  <li class="nav-item"><a href="#">Protagonistas</a></li>
-                  <li class="nav-item"><a href="#">Cómo viajamos</a></li>
+                  <li class="nav-item"><a href="quees.html">Qué es</a></li>
+                  <li class="nav-item"><a href="protagonists.html">Protagonistas</a></li>
+                  <li class="nav-item"><a href="comovi.html">Cómo viajamos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="rutas">
-                <a class="nav-link" href="la rutas.html">RUTAS</a>
+                <a class="nav-link" href="rutas.html">RUTAS</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="la rutas.html">Las Rutas</a>
+                    <a href="rutas.html">Las Rutas</a>
                     <ul class="sub-sections">
                       <li class="nav-item">
-                        <a href="la matcha.html">LA MANCHA</a>
+                        <a href="route.html">LA MANCHA</a>
                       </li>
                       <li class="nav-item"><a href="#">SORIA</a></li>
                       <li class="nav-item"><a href="#">ALPUJARRAS</a></li>
                       <li class="nav-item"><a href="#">ÁVILA y SEGOVIA</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item"><a href="#">Actividades</a></li>
+                  <li class="nav-item"><a href="activities.html">Actividades</a></li>
                   <li class="nav-item">
-                    <a href="#">Información práctica</a>
+                    <a href="infoprac.html">Información práctica</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="nosotras">
-                <a class="nav-link" href="#">NOSOTRAS</a>
+                <a class="nav-link" href="nosotras.html">NOSOTRAS</a>
                 <ul class="sub-menu">
-                  <li class="nav-item"><a href="#">Quiénes somos</a></li>
+                  <li class="nav-item"><a href="nosotras.html">Quiénes somos</a></li>
                 </ul>
               </li>
               <li class="nav-item" id="contacta">
-                <a class="nav-link" href="#">CONTACTA</a>
+                <a class="nav-link" href="contactus.html">CONTACTA</a>
                 <ul class="sub-menu">
                   <li class="nav-item">
-                    <a href="#">Newsletter & Contacto</a>
+                    <a href="contactus.html">Newsletter & Contacto</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" id="Cuaderno">
-                <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
+                <a class="nav-link last-child" href="blog.html">Cuaderno de Campo</a>
               </li>
-              <li class="nav-item d-xl-none"> 
-                  <a class="lang-trigger"> ENG</a> &
-                  <a class="lang-trigger"> FRA</a> 
+              <li class="nav-item d-xl-none">
+                <a class="lang-trigger"> ENG</a> <span class="Brandon-Bold">&</span>  
+                <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
           </div>
@@ -110,15 +113,17 @@
             <button class="search-icon d-xl-block d-none" type="button"></button>
           </div>
          
-          <div class="lang-blk d-xl-flex d-none">
+          <div class="lang-blk d-xl-flex d-none"> 
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
           </div>
         </nav>
+
       </header>
 
       <main id="main-content">
+
         <section id="main-home">
           <img
             src="assets/images/home-img.png"
@@ -199,7 +204,7 @@
               </p>
             </div>
             <div class="arrow-fixed">
-              <a href="la rutas.html">
+              <a href="quees.html">
                 <img
                   src="assets/images/arrow-white.png"
                   data-src="assets/images/arrow-white.png"
@@ -210,7 +215,9 @@
             </div>
           </div>
         </section>
+        
       </main>
+
     </div>
 
     <script
@@ -220,5 +227,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="assets/js/scripts.js?version=7"></script>
+
   </body>
 </html>
